--- a/debug-web-ui/package.json
+++ b/debug-web-ui/package.json
@@ -12,10 +12,10 @@
     "react-scripts": "3.4.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^10.0.1",
-    "@testing-library/user-event": "^10.0.0"
+    "@testing-library/user-event": "^10.0.0",
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
